<resources>
    <string name="app_name">OrganiseMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="organiseme">OrganiseME</string>
    <string name="we_will_organise_your_life">zorganizujemy Twoje życie.</string>
    <string name="menu_help">Pomoc</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_personalisation">Personalizacja</string>
    <string name="menu_calendar">Kalendarz</string>
    <string name="menu_calc">Kalkulator</string>
    <string name="menu_files">Pliki</string>
    <string name="menu_schedule">Grafik</string>
    <string name="menu_notes">Notatki</string>
    <string name="menu_home">Home</string>
    <string name="menu_desc_img_app_logo">App Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
