<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_files"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_menu_calc"
            android:title="@string/menu_calc" />
        <item
            android:id="@+id/nav_caledar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendar" />
    </group>

    <item android:title="@string/menu_personalisation">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
